--- a/src/pages/Login/styles.module.scss
+++ b/src/pages/Login/styles.module.scss
@@ -1,3 +1,11 @@
+.backGround {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 0;
+}
+
 .container {
   width: 100%;
   margin: 0 auto;
@@ -31,12 +39,6 @@
   padding: 5rem 5rem 0rem 5rem;
 
   box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.5);
-}
-
-.selectionImg {
-  width: 100%;
-  height: 10rem;
-  padding-bottom: 3rem;
 }
 
 .loginFormTitle {
