--- a/src/pages/Selection/styles.module.scss
+++ b/src/pages/Selection/styles.module.scss
@@ -114,6 +114,12 @@
   text-decoration: none;
 }
 
+.link {
+  width: 100%;
+  height: 6rem;
+  text-decoration: none;
+}
+
 .btnLogin {
   font-size: 15px;
   border: none;
