--- a/src/pages/Selection/styles.module.scss
+++ b/src/pages/Selection/styles.module.scss
@@ -13,7 +13,7 @@
   justify-content: center;
 
   padding: 15px;
-  background-image: url("./src/assets/backGround.jpeg");
+  background-image: var(--background-image-url);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
