--- a/src/pages/RegisterProfessional/styles.module.scss
+++ b/src/pages/RegisterProfessional/styles.module.scss
@@ -11,7 +11,7 @@
   margin: 0 auto;
 }
 
-.containerLogin {
+.containerRegister {
   width: 100;
   min-height: 100vh;
 
@@ -27,11 +27,11 @@
   background-position: center;
   background-repeat: no-repeat;
 }
-.loginForm {
+.registerForm {
   width: 100%;
 }
-.wrapLogin {
-  width: 45rem;
+.wrapRegister {
+  width: 90%;
   background-color: #333;
   border-radius: 10px;
 
@@ -41,7 +41,7 @@
   box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
-.loginFormTitle {
+.registerFormTitle {
   display: block;
   font-size: 30px;
   margin-bottom: 3rem;
@@ -51,7 +51,6 @@
   text-align: center;
 }
 
-
 .wrapInput {
   width: 100%;
   position: relative;
@@ -59,14 +58,14 @@
   margin-bottom: 37px;
 }
 
-.containerLoginFormBtn {
+.containerRegisterFormBtn {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding-bottom: 13px;
 }
 
-.loginFormBtn {
+.registerFormBtn {
   font-size: 15px;
   border: none;
   border-radius: 10px;
@@ -81,13 +80,29 @@
   width: 100%;
   height: 6rem;
 
-  background: -webkit-linear-gradient(to left, var(--color-button-primary), var(--color-button-secondary));
-  background: -o-linear-gradient(to left, var(--color-button-primary), var(--color-button-secondary));
-  background: -moz-linear-gradient(to left, var(--color-button-primary), var(--color-button-secondary));
-  background: linear-gradient(to left, var(--color-button-primary), var(--color-button-secondary));
+  background: -webkit-linear-gradient(
+    to left,
+    var(--color-button-primary),
+    var(--color-button-secondary)
+  );
+  background: -o-linear-gradient(
+    to left,
+    var(--color-button-primary),
+    var(--color-button-secondary)
+  );
+  background: -moz-linear-gradient(
+    to left,
+    var(--color-button-primary),
+    var(--color-button-secondary)
+  );
+  background: linear-gradient(
+    to left,
+    var(--color-button-primary),
+    var(--color-button-secondary)
+  );
 }
 
-.loginForm-btn {
+.registerForm-btn {
   &:hover {
     cursor: pointer;
   }
@@ -161,10 +176,6 @@
   }
 }
 
-
-
-
-
 .footer {
   font-size: 14px;
   color: #adadad;
@@ -175,4 +186,42 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.registrationType {
+  display: flex;
+  justify-content: space-between;
+
+  color: var(--color-text-gray);
+}
+
+select {
+  background-color: var(--color-text-gray);
+  color: var(--color-text-blue);
+  border: none;
+  border-radius: 4px;
+}
+
+.interationForm {
+  width: 50%;
+}
+
+.editRegister {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+@media screen and (max-width: 769px) {
+  .wrapRegister {
+    display: flex;
+    flex-direction: column;
+  }
+  .editRegister {
+    display: flex;
+    flex-direction: column;
+  }
+  .interationForm {
+    width: 100%;
+  }
 }
