fix: ajuste  registerProfessional

--- a/src/pages/RegisterProfessional/styles.module.scss
+++ b/src/pages/RegisterProfessional/styles.module.scss
@@ -214,8 +214,7 @@ select {
 
 @media screen and (max-width: 769px) {
   .wrapRegister {
-    display: flex;
-    flex-direction: column;
+    width: 90%;
   }
   .editRegister {
     display: flex;
