--- a/src/pages/Selection/styles.module.scss
+++ b/src/pages/Selection/styles.module.scss
@@ -20,7 +20,10 @@
 }
 
 .wrapSelection {
-  width: 45rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
   background-color: #333;
   border-radius: 10px;
 
@@ -102,16 +105,12 @@
 }
 
 .textCenter {
+  margin-top: 6rem;
+  color: #adadad;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-
-  margin-top: 50px;
-  font-size: 14px;
-  color: #adadad;
-  line-height: 1.5;
-  padding-right: 5px;
-  text-decoration: none;
 }
 
 .link {
@@ -173,4 +172,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (max-width: 769px) {
+  .wrapSelection{
+    width: 100%;
+  }
 }
