--- a/src/modal/styles.module.scss
+++ b/src/modal/styles.module.scss
@@ -52,3 +52,15 @@ button{
   color: var(--color-text-gray);
 
 }
+
+.modalContentFoto{
+
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+
+}
