--- a/src/pages/HomeClient/AgendarServico/styles.module.scss
+++ b/src/pages/HomeClient/AgendarServico/styles.module.scss
@@ -55,7 +55,7 @@
   gap: 2rem;
 }
 
-.titleServicos{
+.titleServicos {
   color: var(--color-text-blue);
 }
 
@@ -80,7 +80,7 @@
   transition: background-color 0.3s, border-color 0.3s;
 }
 
-.cardProfissionalSelecionado{
+.cardProfissionalSelecionado {
   display: flex;
   flex-direction: column;
   justify-items: center;
@@ -99,7 +99,6 @@
   font-size: small;
   overflow: hidden;
   transition: background-color 0.3s, border-color 0.3s;
-
 }
 
 .inputRadio {
@@ -111,14 +110,11 @@
   border-radius: 10px;
 }
 
-
-
 .imagemServico {
   width: 9rem;
   height: 8rem;
   border-radius: 10px;
 }
-
 
 .formAgendamentos {
   width: 95%;
@@ -129,15 +125,13 @@
   margin: 2rem 0 2rem 0;
   display: flex;
   flex-direction: row;
-
 }
 
 .agendamentos {
- 
   width: 50%;
   display: flex;
   flex-direction: column;
- 
+
   height: 100%;
 
   align-items: center;
@@ -230,8 +224,6 @@
   color: var(--color-text-gray);
 }
 
-
-
 .divSelecaoHorario {
   width: 60rem;
   height: 40rem;
@@ -247,7 +239,7 @@
   gap: 2rem;
 }
 
-.cardHorarioSelecionado{
+.cardHorarioSelecionado {
   height: 3rem;
   width: 10rem;
   color: var(--color-text-gray);
@@ -285,8 +277,7 @@
   );
 }
 
-
-.cardHorario{
+.cardHorario {
   height: 3rem;
   width: 10rem;
   color: var(--color-text-blue);
@@ -298,7 +289,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  
 
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
@@ -326,17 +316,16 @@
   );
 }
 
-.radioHorarios{
+.radioHorarios {
   appearance: none;
   cursor: pointer;
   height: 3rem;
   width: 10rem;
   position: absolute;
   border-radius: 10px;
-  
 }
 
-.divBtnAgendar{
+.divBtnAgendar {
   height: 5rem;
   width: 25rem;
   color: var(--color-text-gray);
@@ -374,7 +363,7 @@
   );
 }
 
-.btnAgendar{
+.btnAgendar {
   height: 5rem;
   width: 25rem;
   background-color: transparent;
@@ -382,53 +371,43 @@
   color: var(--color-text-gray);
 }
 
-@media screen and (max-width: 769px) {
-  .wrapLogin {
-    width: 100%;
-  }
-}
-
-.container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.containerFooter {
-  background-color: #333;
-  color: #adadad;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100vw;
-}
-
-.logo {
-  padding: 4rem;
-  font-size: 1.5rem;
-}
-
-.contatos {
-  display: block;
-  font-size: 2.5rem;
-  padding: 5rem;
-  color: #adadad;
-
-  line-height: 1.2;
-  text-align: center;
-}
-
-.titleEndereco {
-  display: block;
-  font-size: 2.5rem;
-  padding: 5rem;
-  color: #adadad;
-
-  line-height: 1.2;
-  text-align: center;
-}
-
 .icone {
   width: 25rem;
   height: 25rem;
 }
+
+@media screen and (max-width: 769px) {
+  .formAgendamentos {
+    width: 98%;
+    height: 100%;
+    margin: 2rem 0 2rem 0;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .agendamentos {
+    width: 100%;
+    flex-direction: row;
+  }
+
+  .divBtn {
+    margin: 1rem;
+    height: 100%;
+  }
+
+  .formBtn {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+  }
+
+  .divSelecaoHorario {
+    width: 100%;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .divBtnAgendar {
+    margin-bottom: 2rem;
+  }
+}
+
+
