--- a/src/pages/HomeClient/LocalizarProfissional/styles.module.scss
+++ b/src/pages/HomeClient/LocalizarProfissional/styles.module.scss
@@ -260,53 +260,69 @@ align-items: center;
   border-radius: 10px;
 }
 
-@media screen and (max-width: 769px) {
-  .wrapLogin {
-    width: 100%;
-  }
-}
-
-.container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.containerFooter {
-  background-color: #333;
-  color: #adadad;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100vw;
-}
-
-.logo {
-  padding: 4rem;
-  font-size: 1.5rem;
-}
-
-.contatos {
-  display: block;
-  font-size: 2.5rem;
-  padding: 5rem;
-  color: #adadad;
-
-  line-height: 1.2;
-  text-align: center;
-}
-
-.titleEndereco {
-  display: block;
-  font-size: 2.5rem;
-  padding: 5rem;
-  color: #adadad;
-
-  line-height: 1.2;
-  text-align: center;
-}
-
 .iconeSearching{
   width: 30rem;
   height: 30rem;
 }
+
+@media screen and (max-width: 769px) {
+  .localizarProfissional{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+    
+    .title {
+      margin: 0;
+      padding: 1rem 2rem;
+      text-align: center;
+    }
+    
+    .formAgendamentos {
+      width: 90%;
+      height: 100%;
+      margin: 0;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    .agendamentos {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch
+    }
+
+    .divSelecaoProfissionais {
+      margin: 5rem 0;
+      border: 1px solid var(--color-text-gray);
+      border-radius: 10px;
+      padding: 1rem;
+      height: 20rem;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 0.5rem;
+      width: 100%;
+    }
+    
+    .cardProfissional {
+      display: flex;
+      justify-items: center;
+      justify-content: center;
+      margin: 0;
+      gap: 0.5rem;
+      padding: 0.5rem;
+    
+      text-align: center;
+    }
+    
+    .linkCards {
+      text-align: center;
+
+    }
+    
+}
+
