--- a/src/pages/HomeClient/MeuCadastro/styles.module.scss
+++ b/src/pages/HomeClient/MeuCadastro/styles.module.scss
@@ -23,60 +23,80 @@
   padding: 2rem;
 }
 
+.containerMeusDados{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: flex-end;
+  flex-wrap: nowrap;
+  align-items: stretch;
+  width: 100%;
+  padding-right: 2rem;
+}
+
 .opcaoMenu{
   text-decoration: none;
   color: var(--color-text-gray);
   font-size: medium;
+  padding-bottom: 1rem;
+  border-bottom: 0.2px solid ;
 }
 
-
-@media screen and (max-width: 769px) {
-  .wrapLogin {
-    width: 100%;
-  }
-}
-
-.container {
-  min-height: 100vh;
+.containerUsuario {
   display: flex;
   flex-direction: column;
-}
-
-.containerFooter {
-  background-color: #333;
-  color: #adadad;
-  display: flex;
-  flex-direction: row;
   align-items: center;
-  width: 100vw;
+  justify-content: flex-end;
+  gap: 1rem;
+  margin: 1rem 2rem;
+  color: var(--color-text-gray);
+  align-content: flex-end;
+  flex-wrap: wrap;
 }
 
-.logo {
-  padding: 4rem;
-  font-size: 1.5rem;
+.goStar{
+  color: yellow;
 }
 
-.contatos {
-  display: block;
-  font-size: 2.5rem;
-  padding: 5rem;
-  color: #adadad;
-
-  line-height: 1.2;
-  text-align: center;
-}
-
-.titleEndereco {
-  display: block;
-  font-size: 2.5rem;
-  padding: 5rem;
-  color: #adadad;
-
-  line-height: 1.2;
-  text-align: center;
-}
 
 .iconeSearching {
   width: 30rem;
   height: 30rem;
+}
+
+
+@media screen and (max-width: 769px) {
+  .containerAgendamentos {
+    width: 99%;
+    height: 100%;
+
+    flex-direction: column;
+    padding-bottom: 3rem;
+    gap: 1rem;
+  }
+
+  .containerMenuLateral{
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 100%;
+    max-height: 8rem;
+    align-items: flex-end;
+    padding: 1rem;
+  }
+
+  .containerMeusDados{
+    padding-right: 0rem;
+    width: 100%;
+  }
+
+  .containerUsuario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 1rem;
+    margin: 0.5rem 1rem 0 0;
+    align-content: flex-end;
+    flex-wrap: wrap;
+  }
 }
