--- a/src/pages/HomeClient/MeusAgendamentos/styles.module.scss
+++ b/src/pages/HomeClient/MeusAgendamentos/styles.module.scss
@@ -27,14 +27,10 @@
   text-decoration: none;
   color: var(--color-text-gray);
   font-size: medium;
+  padding-bottom: 1rem;
+  border-bottom: 0.2px solid ;
 }
 
-
-@media screen and (max-width: 769px) {
-  .wrapLogin {
-    width: 100%;
-  }
-}
 
 .container {
   min-height: 100vh;
@@ -79,4 +75,25 @@
 .iconeSearching {
   width: 30rem;
   height: 30rem;
+}
+
+@media screen and (max-width: 769px) {
+
+  .containerAgendamentos {
+    width: 99%;
+    height: 100%;
+    max-height: 80rem;
+    flex-direction: column;
+    padding-bottom: 3rem;
+    gap: 1rem;
+  }
+
+  .containerMenuLateral{
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 100%;
+    max-height: 8rem;
+    align-items: flex-end;
+    padding: 1rem;
+  }
 }
