--- a/src/pages/HomeClient/LocalizarProfissional/styles.module.scss
+++ b/src/pages/HomeClient/LocalizarProfissional/styles.module.scss
@@ -267,6 +267,9 @@ align-items: center;
 
 @media screen and (max-width: 769px) {
   .localizarProfissional{
+    // position: absolute;
+    // top: 20%;
+    // background-color: #333;
     width: 100%;
     display: flex;
     flex-direction: column;
