--- a/src/pages/HomeClient/AgendarServico/styles.module.scss
+++ b/src/pages/HomeClient/AgendarServico/styles.module.scss
@@ -380,23 +380,34 @@
   .formAgendamentos {
     width: 98%;
     height: 100%;
-    margin: 2rem 0 2rem 0;
+    margin: 0.5rem 0 1rem 0;
     flex-direction: column;
     align-items: center;
   }
 
   .agendamentos {
     width: 100%;
+    height: 10rem;
     flex-direction: row;
+    justify-content: space-around;
+    margin-top: 1rem;
+  }
+
+  .divSelecaoDados{
+    padding: 0;
   }
 
   .divBtn {
     margin: 1rem;
-    height: 100%;
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center
   }
 
   .formBtn {
-    width: 100%;
+    width: 60%;
     height: 100%;
     border-radius: 10px;
   }
