--- a/src/pages/Login/styles.module.scss
+++ b/src/pages/Login/styles.module.scss
@@ -62,6 +62,7 @@
   border-bottom: 2px solid #adadad;
   margin-bottom: 37px;
 }
+
 .containerLoginFormBtn{
   width: 100%;
   display: flex;
@@ -158,6 +159,9 @@ width: 70%;
     width: 85%;
     overflow: hidden;
     padding: 5rem 5rem 1rem 5rem;
+  }
 
+  .wrapInput {
+    width: 100%;
   }
 }
