--- a/src/pages/Login/styles.module.scss
+++ b/src/pages/Login/styles.module.scss
@@ -152,6 +152,7 @@ width: 70%;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 @media screen and (max-width: 769px) {
@@ -164,4 +165,5 @@ width: 70%;
   .wrapInput {
     width: 100%;
   }
+
 }
