--- a/src/pages/RegisterProfessional/styles.module.scss
+++ b/src/pages/RegisterProfessional/styles.module.scss
@@ -1,45 +1,28 @@
-.backGround {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-  z-index: 0;
-}
-
-.container {
+.registerForm {
   width: 100%;
-  margin: 0 auto;
-}
-
-.containerRegister {
-  width: 100;
-  min-height: 100vh;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
   padding: 15px;
-
   background-image: var(--background-image-url);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
-.registerForm {
-  width: 100%;
-}
+
 .wrapRegister {
-  width: 90%;
+  width: 100%;
   background-color: #333;
   border-radius: 10px;
-
-  overflow: hidden;
-  padding: 5rem 5rem 0rem 5rem;
-
+  padding: 2rem;
   box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+.containerLogo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+    }
 
 .registerFormTitle {
   display: block;
@@ -51,12 +34,46 @@
   text-align: center;
 }
 
+.editRegister {
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.containerSenhas{
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  gap: 5rem;
+}
+
 .wrapInput {
   width: 100%;
   position: relative;
   border-bottom: 2px solid #adadad;
   margin-bottom: 37px;
 }
+
+.registrationType {
+  width: 100%;
+  position: relative;
+  border-bottom: 2px solid #adadad;
+  margin-bottom: 37px;
+  display: flex;
+  justify-content: space-between;
+
+  color: var(--color-text-gray);
+}
+
+select {
+  background-color: var(--color-text-gray);
+  color: var(--color-text-blue);
+  border: none;
+  border-radius: 4px;
+}
+
+
 
 .containerRegisterFormBtn {
   display: flex;
@@ -188,29 +205,9 @@
   align-items: center;
 }
 
-.registrationType {
-  display: flex;
-  justify-content: space-between;
 
-  color: var(--color-text-gray);
-}
 
-select {
-  background-color: var(--color-text-gray);
-  color: var(--color-text-blue);
-  border: none;
-  border-radius: 4px;
-}
 
-.interationForm {
-  width: 50%;
-}
-
-.editRegister {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
-}
 
 @media screen and (max-width: 769px) {
   .wrapRegister {
@@ -234,5 +231,13 @@ align-items: center;
 
   .registrationType{
     align-items: flex-start;
+  }
+
+  .containerSenhas{
+    margin-top: 1rem;
+    width: 100;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 }
